arch-perl-0.5.1 (08-Oct-2005)

* Added detection of Arch Cache in Arch::Backend.
* Added support for Arch Cache in Arch::Session::get_changeset and get_log.
* Auto-resolved version/revision aliases FIRST|LATEST may be retrieved now.
* More "annotate" options in Arch::Tree::get_annotate_revision_descs.
* Supported baz-1.4.2 and tla-1.3.3.
* Added documentation of Arch::SharedIndex and Arch::SharedCache.
* Better process handling in Arch::Run.

arch-perl-0.5.0 (25-Apr-2005)

* New Arch::Tree::get_annotate_revision_descs method to annotate file.
* New Arch::Tree methods get_ancestry_logs and get_history_revision_descs.
  The old API of iterate_ancestry_logs and get_a_r_d works, but obsolete.
* Arch::Tree ancestry/history methods now list revisions under version-0.
* Arch::Changes now works with constant DELETE, instead of obsolete REMOVE.
* New Arch::Session and Arch::Library constructor "instance" (singleton).
* New class Arch::DiffParser to parse diffs in unified format.
* New class Arch::FileHighlighter to syntax-highlight files using markup.
* Enhanced Arch::Log with more methods.
* Enhanced Arch::Session with more methods.
* Enhanced Arch::Changeset with more methods.
* Implemented Arch::Tarball::extract method.
* Added tests for Arch::Util, and small refactoring.
* Added "make rpm-dist [options]" procedure to build rpm packages.
* New class Arch::Backend allows to query arch backend specific features.
* Supported baz-1.2, baz-1.3, baz-1.3.2, tla-1.3 and tla-1.3.1.
* New test framework (not complete yet).
* New Arch::Run framework for running subprocesses asynchronously.
* New samples/ directory, currently containing two small Arch::Run demos.

arch-perl-0.4.2 (30-Jan-2005)

* Supported baz 1.1, set environment variable ARCH_BACKEND=baz to activate.
* Added options in Arch::Session::get_tree.

arch-perl-0.4.1 (18-Jan-2005)

* Improved Arch::Storage documentation.
* Added "make debian" to bring debian/ subdirectory for those who need it.