@@ -5,12 +5,14 @@
 use FindBin;
 use lib "$FindBin::Bin/../perllib";
 
-use Test::More tests => 11;
+use Test::More;
+use Arch::Util qw(is_tla_functional);
 
-BEGIN {
-	use_ok("Arch::Inventory", qw(:category :type));
-	use_ok("Arch::Test::Framework");
-}
+plan skip_all => "No functional arch backend" unless is_tla_functional;
+plan tests => 11;
+
+use_ok("Arch::Inventory");
+use_ok("Arch::Test::Framework");
 
 my $framework = Arch::Test::Framework->new;
 my $archive   = $framework->make_archive;
