@@ -5,7 +5,12 @@
 use FindBin;
 use lib "$FindBin::Bin/../perllib";
 
-use Test::More tests => 37;
+use Test::More;
+use Arch::Util qw(is_tla_functional);
+
+plan skip_all => "No functional arch backend" unless is_tla_functional;
+plan tests => 37;
+
 use_ok("Arch::Session");
 use_ok("Arch::Util", "run_tla", "save_file");
 use_ok("Arch::Backend", "has_archive_setup_cmd");
