@@ -1,3 +1,11 @@
+arch-perl-0.5.2 (08-Mar-2010)
+
+* Adapted all relevant tests to quietly pass (be skipped) without tla.
+* Applied fix for Changeset dir containing regexp chars.
+* Enabled caching of tree logs.
+* Enhanced history method of Arch::Tree.
+* Small improvements in documentation files.
+
 arch-perl-0.5.1 (08-Oct-2005)
 
 * Added detection of Arch Cache in Arch::Backend.
